--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,24 @@
+ 
 .App {
   text-align: center;
+  margin: 0;
+  padding: 0;
 }     
+
+.fade-enter {
+  opacity: 0;
+}
+
+.fade-enter-active {
+  opacity: 50;
+  transition: opacity 300ms;
+}
+
+.fade-exit {
+  opacity: 1;
+}
+
+.fade-exit-active {
+  opacity: 0;
+  transition: opacity 600ms;
+}
